<resources>
    <string name="my_app">Android SketchPad</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_example">Example action</string>

    <string name="action_settings">Settings</string>
    <string name="details_menu_text">Increase Text Size</string>
    <string name="details_bookmark">Bookmark</string>
    <string name="details_share">Share</string>
    <string name="settings">Settings</string>
    <string name="details_mock_text">Something went wrong!\nPlease navigate back.\nTap to back</string>



    <!-- Settings -->
    <!-- array -->
    <string name="week1">1 week</string>
    <string name="week2">2 weeks</string>
    <string name="week3">3 weeks</string>
    <string name="month">1 month</string>

    <string name="week1_value">7</string>
    <string name="week2_value">14</string>
    <string name="week3_value">21</string>
    <string name="month_value">30</string>

    <string name="list_key">listKey</string>
    <string name="list_Label">Sync Interval</string>

    <string name="share_data_Label">Share anonymous data</string>
    <string name="share_data_key">anonymous</string>

    <string name="pref_sync">Sync Setting</string>
    <string name="pref_sync_des">After selected interval,
        data will be updated automatically</string>


    <!-- manifest -->
    <string name="about">About Blog</string>
    <string name="bookmark">Bookmarks List</string>
    <string name="no_bookmark">You don\'t have any bookmark yet.\n
    click on bookmark icon to save as bookmark</string>
    <string name="content_app_icon">app_icon</string>
    <string name="search">search</string>
    <string name="speak_voice">Speak now</string>
    <string name="app_version">Version:1</string>
    <string name="app_icon">App icon</string>
    <string name="page">Pages</string>
    <string name="developer_label">About Developer</string>
    <string name="about_app">About App</string>

</resources>
