<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Shudipto Trafder
  ~ on 6/11/18 7:27 PM
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/textSize"
        android:icon="@android:drawable/btn_plus"
        android:title="@string/details_menu_text"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/bookmark"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/details_bookmark"
        app:showAsAction="always" />
    <item
        android:id="@+id/share"
        android:icon="@drawable/ic_menu_share"
        android:title="@string/details_share"
        app:showAsAction="ifRoom"
        app:actionProviderClass="android.support.v7.widget.ShareActionProvider"/>

    <item
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/settings"
        app:showAsAction="never" />


</menu>